--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1,9 +1,40 @@
+/*VARIABLES COLORS */
+
 $backColor:#F2F1F1;
+$titleColor:#393536;
+
+
+
+/*LAYOUT MOBILE*/
+
 
 body{
+
+	section{
+	margin-top:70px;
+		&#main-screen-to-park{
+
+			img{
+				max-width: 45%;
+			}
+		}
+	}
+
+	.wrap{
+	text-align:center;
+	margin: 0 auto;
+
+	}
     background-color: $backColor;
+    font-family: Arial, Helvetica, sans-serif;
+
+    h1{
+    text-transform:uppercase;
+    font-size:1.4em;
+    margin-top:100px;
+    margin-bottom:50px;
+
+
+    }
 }
 
-p{
-	color:blue;
-}
