--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,9 @@
 /*VARIABLES COLORS */
+/*VARIABLES BUTTONS*/
 /*LAYOUT MOBILE*/
 body {
   background-color: #f2f1f1;
-  font-family: Arial, Helvetica, sans-serif; }
+  font-family: 'Lato', sans-serif; }
   body section {
     margin-top: 70px; }
     body section#main-screen-to-park img {
@@ -11,6 +12,7 @@ body {
     text-align: center;
     margin: 0 auto; }
   body h1 {
+    color: rgba(0, 0, 0, 0.6);
     text-transform: uppercase;
     font-size: 1.4em;
     margin-top: 100px;
