--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,13 +1,46 @@
 /*VARIABLES COLORS */
 /*VARIABLES BUTTONS*/
+/*MIXIN 4 BUTTONS*/
 /*LAYOUT MOBILE*/
+/* SMALL RESET*/
+body, ul {
+  margin: 0;
+  padding: 0; }
+
 body {
   background-color: #f2f1f1;
-  font-family: 'Lato', sans-serif; }
+  font-family: 'Lato', sans-serif;
+  text-transform: uppercase; }
   body section {
     margin-top: 70px; }
+    body section ul {
+      margin-top: 80px; }
+    body section ul li {
+      list-style-type: none;
+      text-align: center;
+      margin-top: 15px; }
+      body section ul li a {
+        text-decoration: none;
+        font-family: 'Lato', sans-serif;
+        font-size: 2em;
+        font-weight: 800;
+        color: white;
+        display: block;
+        width: 65%;
+        margin: 0 auto; }
+        body section ul li a.blueBtn {
+          background: #3f55af;
+          padding: 10px 25px;
+          border-radius: 10px;
+          border-bottom: 4px solid #284083; }
+        body section ul li a.redBtn {
+          background: #e62423;
+          padding: 10px 25px;
+          border-radius: 10px;
+          border-bottom: 4px solid #9d1b20; }
     body section#main-screen-to-park img {
-      max-width: 45%; }
+      max-width: 35%;
+      margin: 0 10px; }
   body .wrap {
     text-align: center;
     margin: 0 auto; }
@@ -16,4 +49,5 @@ body {
     text-transform: uppercase;
     font-size: 1.4em;
     margin-top: 100px;
-    margin-bottom: 50px; }
+    margin-bottom: 40px;
+    font-weight: 900; }
