--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -2,30 +2,84 @@
 
 $backColor:#F2F1F1;
 $titleColor:rgba(0,0,0,0.6);
+$btnTextColor: #FFF;
 
 /*VARIABLES BUTTONS*/
 
-$blueBtn:#F2F1F1;
+$blueBtn:#3F55AF;
+$blueBtnBorder: #284083;
+
 $lightBlueBtn:#F2F1F1;
+
 $greenBtn:#F2F1F1;
-$redBtn:#F2F1F1;
 
+$redBtn:#E62423;
+$redBtnBorder:#9D1B20;
 
+/*MIXIN 4 BUTTONS*/
+
+@mixin blueBtn{
+	background:$blueBtn;
+	padding: 10px 25px;
+	border-radius: 10px;
+	border-bottom:4px solid $blueBtnBorder ;
+}
+
+@mixin redBtn{
+	background:$redBtn;
+	padding: 10px 25px;
+	border-radius: 10px;
+	border-bottom:4px solid $redBtnBorder ;
+}
 
 /*LAYOUT MOBILE*/
 
+/* SMALL RESET*/
 
+body,ul{
+	margin:0;
+	padding:0;
+}
+	
 body{
 
 	background-color: $backColor;
     font-family: 'Lato', sans-serif;
+    text-transform:uppercase;
 
 	section{
+	ul{
+		margin-top:80px;
+	}
+	ul li {
+		list-style-type:none;
+		text-align:center;
+		margin-top:15px;
+
+		& a{
+			text-decoration:none;
+			font-family: 'Lato', sans-serif;
+			font-size:2em;
+			font-weight:800;
+			color:$btnTextColor;
+			display:block; // to display as exemple report controller on two lines instead of one.
+			width:65%;
+			margin: 0 auto;
+
+			&.blueBtn{
+				@include blueBtn;
+			}
+			&.redBtn{
+				@include redBtn;
+			}
+		}
+	}
 	margin-top:70px;
 		&#main-screen-to-park{
 
 			img{
-				max-width: 45%;
+				max-width: 35%;
+				margin:0 10px;
 			}
 		}
 	}
@@ -41,7 +95,8 @@ body{
     text-transform:uppercase;
     font-size:1.4em;
     margin-top:100px;
-    margin-bottom:50px;
+    margin-bottom:40px;
+    font-weight:900;
 
 
     }
