--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,31 +1,68 @@
 /*VARIABLES COLORS */
 /*VARIABLES BUTTONS*/
-/*MIXIN 4 BUTTONS*/
+/*@MIXIN 4 BUTTONS*/
 /* HIDE SECTION (HELPER TO BUILD WEBSITE)*/
 .hideThis {
   display: none; }
 
-/*LAYOUT MOBILE*/
 /* SMALL RESET*/
 body, ul {
   margin: 0;
   padding: 0; }
 
+/*GERNERAL LAYOUT*/
 body {
   background-color: #f2f1f1;
   font-family: 'Lato', sans-serif;
   text-transform: uppercase; }
   body section {
-    margin-top: 70px; }
-    body section#main-screen-to-park img {
-      max-width: 35%;
+    margin-top: 70px;
+    /*STYLING PLACERHOLDER*/ }
+    body section img {
+      max-width: 30%;
       margin: 0 10px;
-      margin-bottom: 60px; }
+      margin-bottom: 50px; }
+    body section input {
+      display: block;
+      margin: 0 auto;
+      width: 65%;
+      border: none;
+      background: white;
+      border-radius: 10px;
+      border-top: 4px solid #b5b5b4;
+      min-height: 50px; }
+    body section ::-webkit-input-placeholder {
+      font-size: 2em;
+      font-family: 'Lato', sans-serif;
+      text-transform: uppercase;
+      text-align: center; }
+    body section :-moz-placeholder {
+      /* Firefox 18- */
+      font-size: 2em;
+      font-family: 'Lato', sans-serif;
+      text-transform: uppercase;
+      text-align: center; }
+    body section ::-moz-placeholder {
+      /* Firefox 19+ */
+      font-size: 2em;
+      font-family: 'Lato', sans-serif;
+      text-transform: uppercase;
+      text-align: center; }
+    body section :-ms-input-placeholder {
+      font-size: 2em;
+      font-family: 'Lato', sans-serif;
+      text-transform: uppercase;
+      text-align: center; }
+    body section .btn-group {
+      position: absolute;
+      bottom: 10px;
+      left: 0;
+      right: 0; }
     body section button {
       border: 0;
       text-decoration: none;
       font-family: 'Lato', sans-serif;
-      font-size: 1.5em;
+      font-size: 1.2em;
       font-weight: 800;
       color: white;
       display: block;
@@ -33,22 +70,30 @@ body {
       margin: 10px auto;
       line-height: 1.6em; }
       body section button.redBtn {
-        background: #e62423;
-        padding: 10px 25px;
         border-radius: 10px;
-        border-bottom: 4px solid #9d1b20; }
+        border-bottom: 4px solid;
+        min-height: 50px;
+        background-color: #e62423;
+        border-color: #9d1b20; }
       body section button.blueBtn {
-        background: #3f55af;
-        padding: 10px 25px;
         border-radius: 10px;
-        border-bottom: 4px solid #284083; }
+        border-bottom: 4px solid;
+        min-height: 50px;
+        background-color: #3f55af;
+        border-color: #284083; }
+      body section button.greenBtn {
+        border-radius: 10px;
+        border-bottom: 4px solid;
+        min-height: 50px;
+        background-color: #18ae60;
+        border-color: #246e36; }
   body .wrap {
     text-align: center;
     margin: 0 auto; }
   body h1 {
     color: rgba(0, 0, 0, 0.6);
     text-transform: uppercase;
-    font-size: 1.4em;
-    margin-top: 100px;
+    font-size: 1.2em;
+    margin-top: 80px;
     margin-bottom: 40px;
     font-weight: 900; }
