--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,7 +21,7 @@ body {
     body section img {
       max-width: 30%;
       margin: 0 10px;
-      margin-bottom: 50px; }
+      margin-bottom: 60px; }
     body section input {
       display: block;
       margin: 0 auto;
@@ -55,7 +55,7 @@ body {
       text-align: center; }
     body section .btn-group {
       position: absolute;
-      bottom: 10px;
+      bottom: 20px;
       left: 0;
       right: 0; }
     body section button {
@@ -87,6 +87,12 @@ body {
         min-height: 50px;
         background-color: #18ae60;
         border-color: #246e36; }
+    body section time {
+      display: block;
+      font-size: 2.5em;
+      text-align: center;
+      font-weight: bold;
+      font-family: 'Lato', sans-serif; }
   body .wrap {
     text-align: center;
     margin: 0 auto; }
