--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -75,7 +75,7 @@ body{
 		img{
 			max-width: 30%;
 			margin:0 10px;
-			margin-bottom: 50px;
+			margin-bottom: 60px;
 		}
 
 		input{
@@ -90,6 +90,7 @@ body{
 
 		::-webkit-input-placeholder {
    			@include inputPlaceholder;
+
 		}
 
 		:-moz-placeholder { /* Firefox 18- */
@@ -106,7 +107,7 @@ body{
 		
 		.btn-group{
 			position:absolute;
-			bottom:10px;
+			bottom:20px;
 			left:0;
 			right:0;
 		}
@@ -141,6 +142,15 @@ body{
 				background-color:$greenBtn;
 				border-color: $greenBtnBorder;
 			}
+
+		}
+
+		time{
+			display:block;
+			font-size:2.5em;
+			text-align:center;
+			font-weight:bold;
+			font-family: 'Lato', sans-serif;
 
 		}
 	}
