--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,84 +15,6 @@ body {
   background-color: #f2f1f1;
   font-family: 'Lato', sans-serif;
   text-transform: uppercase; }
-  body section {
-    margin-top: 70px;
-    /*STYLING PLACERHOLDER*/ }
-    body section img {
-      max-width: 30%;
-      margin: 0 10px;
-      margin-bottom: 60px; }
-    body section input {
-      display: block;
-      margin: 0 auto;
-      width: 65%;
-      border: none;
-      background: white;
-      border-radius: 10px;
-      border-top: 4px solid #b5b5b4;
-      min-height: 50px; }
-    body section ::-webkit-input-placeholder {
-      font-size: 2em;
-      font-family: 'Lato', sans-serif;
-      text-transform: uppercase;
-      text-align: center; }
-    body section :-moz-placeholder {
-      /* Firefox 18- */
-      font-size: 2em;
-      font-family: 'Lato', sans-serif;
-      text-transform: uppercase;
-      text-align: center; }
-    body section ::-moz-placeholder {
-      /* Firefox 19+ */
-      font-size: 2em;
-      font-family: 'Lato', sans-serif;
-      text-transform: uppercase;
-      text-align: center; }
-    body section :-ms-input-placeholder {
-      font-size: 2em;
-      font-family: 'Lato', sans-serif;
-      text-transform: uppercase;
-      text-align: center; }
-    body section .btn-group {
-      position: absolute;
-      bottom: 20px;
-      left: 0;
-      right: 0; }
-    body section button {
-      border: 0;
-      text-decoration: none;
-      font-family: 'Lato', sans-serif;
-      font-size: 1.2em;
-      font-weight: 800;
-      color: white;
-      display: block;
-      width: 65%;
-      margin: 10px auto;
-      line-height: 1.6em; }
-      body section button.redBtn {
-        border-radius: 10px;
-        border-bottom: 4px solid;
-        min-height: 50px;
-        background-color: #e62423;
-        border-color: #9d1b20; }
-      body section button.blueBtn {
-        border-radius: 10px;
-        border-bottom: 4px solid;
-        min-height: 50px;
-        background-color: #3f55af;
-        border-color: #284083; }
-      body section button.greenBtn {
-        border-radius: 10px;
-        border-bottom: 4px solid;
-        min-height: 50px;
-        background-color: #18ae60;
-        border-color: #246e36; }
-    body section time {
-      display: block;
-      font-size: 2.5em;
-      text-align: center;
-      font-weight: bold;
-      font-family: 'Lato', sans-serif; }
   body .wrap {
     text-align: center;
     margin: 0 auto; }
@@ -103,3 +25,102 @@ body {
     margin-top: 80px;
     margin-bottom: 40px;
     font-weight: 900; }
+
+section {
+  margin-top: 50px;
+  /*STYLING PLACERHOLDER*/ }
+  section img {
+    max-width: 30%;
+    margin: 0 10px;
+    margin-bottom: 60px; }
+  section input {
+    display: block;
+    margin: 0 auto;
+    width: 65%;
+    border: none;
+    background: white;
+    border-radius: 10px;
+    border-top: 4px solid #b5b5b4;
+    min-height: 50px; }
+  section ::-webkit-input-placeholder {
+    font-size: 2em;
+    font-family: 'Lato', sans-serif;
+    text-transform: uppercase;
+    text-align: center; }
+  section :-moz-placeholder {
+    /* Firefox 18- */
+    font-size: 2em;
+    font-family: 'Lato', sans-serif;
+    text-transform: uppercase;
+    text-align: center; }
+  section ::-moz-placeholder {
+    /* Firefox 19+ */
+    font-size: 2em;
+    font-family: 'Lato', sans-serif;
+    text-transform: uppercase;
+    text-align: center; }
+  section :-ms-input-placeholder {
+    font-size: 2em;
+    font-family: 'Lato', sans-serif;
+    text-transform: uppercase;
+    text-align: center; }
+  section .btn-group {
+    position: absolute;
+    bottom: 20px;
+    left: 0;
+    right: 0; }
+  section button {
+    border: 0;
+    text-decoration: none;
+    font-family: 'Lato', sans-serif;
+    font-size: 1.2em;
+    font-weight: 800;
+    color: white;
+    display: block;
+    width: 65%;
+    margin: 10px auto;
+    line-height: 1.6em; }
+    section button.redBtn {
+      border-radius: 10px;
+      border-bottom: 4px solid;
+      min-height: 50px;
+      background-color: #e62423;
+      border-color: #9d1b20; }
+    section button.blueBtn {
+      border-radius: 10px;
+      border-bottom: 4px solid;
+      min-height: 50px;
+      background-color: #3f55af;
+      border-color: #284083; }
+    section button.greenBtn {
+      border-radius: 10px;
+      border-bottom: 4px solid;
+      min-height: 50px;
+      background-color: #18ae60;
+      border-color: #246e36; }
+
+/* #PARK HERE DISC*/
+time {
+  display: block;
+  font-size: 2.5em;
+  text-align: center;
+  font-weight: bold;
+  font-family: 'Lato', sans-serif; }
+
+/*PARK HERE NOTES*/
+#park-here-notes h1 {
+  font-family: 'Lato' sans-serif;
+  font-size: 2.0em;
+  margin-top: 10px; }
+#park-here-notes textarea {
+  border: 0;
+  background: white;
+  border-radius: 10px;
+  border-top: 4px solid #b5b5b4;
+  min-height: 50px;
+  width: 70%;
+  min-height: 180px;
+  font-family: 'Lato', sans-serif;
+  text-transform: uppercase;
+  color: rgba(0, 0, 0, 0.6);
+  padding: 5px; }
