--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -68,9 +68,27 @@ body{
     font-family: 'Lato', sans-serif;
     text-transform:uppercase;
 
+
+	.wrap{
+	text-align:center;
+	margin: 0 auto;
+
+	}
+
+    h1{
+    color:$titleColor;
+    text-transform:uppercase;
+    font-size:1.2em;
+    margin-top:80px;
+    margin-bottom:40px;
+    font-weight:900;
+
+    }
+}
+
 	section{
 
-	margin-top:70px;
+	margin-top:50px;
 
 		img{
 			max-width: 30%;
@@ -142,36 +160,41 @@ body{
 				background-color:$greenBtn;
 				border-color: $greenBtnBorder;
 			}
-
-		}
-
-		time{
-			display:block;
-			font-size:2.5em;
-			text-align:center;
-			font-weight:bold;
-			font-family: 'Lato', sans-serif;
-
 		}
 	}
 
-	
+/* #PARK HERE DISC*/
 
-	.wrap{
+
+time{
+
+	display:block;
+	font-size:2.5em;
 	text-align:center;
-	margin: 0 auto;
-
-	}
-
-    h1{
-    color:$titleColor;
-    text-transform:uppercase;
-    font-size:1.2em;
-    margin-top:80px;
-    margin-bottom:40px;
-    font-weight:900;
-
-
-    }
+	font-weight:bold;
+	font-family: 'Lato', sans-serif;
 }
 
+
+
+/*PARK HERE NOTES*/
+
+#park-here-notes{
+
+	h1{
+		font-family: 'Lato' sans-serif;
+		font-size:2.0em;
+		margin-top:10px;
+	}
+
+	textarea{
+		border:0;
+		@include whiteInput;
+		width:70%;
+		min-height:180px;
+		font-family:'Lato', sans-serif;
+		text-transform: uppercase;
+		color:$titleColor;
+		padding:5px;
+	}
+}
