#main-screen-parked buttons added/mostly done

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -98,16 +98,22 @@ section {
       min-height: 50px;
       background-color: #18ae60;
       border-color: #246e36; }
+    section button.lightBlueBtn {
+      border-radius: 10px;
+      border-bottom: 4px solid;
+      min-height: 50px;
+      background-color: #50ade5;
+      border-color: #3c86ad; }
 
 /* #PARK HERE DISC*/
-time {
+#park-here-disc time {
   display: block;
   font-size: 2.5em;
   text-align: center;
   font-weight: bold;
   font-family: 'Lato', sans-serif; }
 
-/*PARK HERE NOTES*/
+/* #PARK HERE NOTES */
 #park-here-notes h1 {
   font-family: 'Lato' sans-serif;
   font-size: 2.0em;
@@ -124,3 +130,17 @@ time {
   text-transform: uppercase;
   color: rgba(0, 0, 0, 0.6);
   padding: 5px; }
+
+/* #MAIN SCREEN PARKED */
+#main-screen-parked {
+  margin: 0; }
+  #main-screen-parked h1 {
+    padding: 0;
+    margin: 0;
+    margin-bottom: 15px; }
+  #main-screen-parked span time {
+    font-size: 2em;
+    color: red;
+    font-weight: bold; }
+  #main-screen-parked .btn-group {
+    position: initial; }
