--- a/public/css/style.css
+++ b/public/css/style.css
@@ -74,7 +74,7 @@ section {
     text-decoration: none;
     font-family: 'Lato', sans-serif;
     font-size: 1.2em;
-    font-weight: 800;
+    font-weight: 900;
     color: white;
     display: block;
     width: 65%;
@@ -140,7 +140,11 @@ section {
     margin-bottom: 15px; }
   #main-screen-parked span time {
     font-size: 2em;
-    color: red;
-    font-weight: bold; }
+    color: #C01A2C;
+    font-weight: bold;
+    padding: 0 0 0 50px;
+    background-image: url("../images/img_disc_on.png");
+    background-size: 40px;
+    background-repeat: no-repeat; }
   #main-screen-parked .btn-group {
     position: initial; }
