--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -136,7 +136,7 @@ body{
 			text-decoration:none;
 			font-family: 'Lato', sans-serif;
 			font-size:1.2em;
-			font-weight:800;
+			font-weight:900;
 			color:$btnTextColor;
 			display:block; // to display as exemple report controller on two lines instead of one.
 			width:65%;
@@ -221,8 +221,12 @@ body{
 	
 	span time{
 		font-size:2em;
-		color:red;
+		color:#C01A2C;
 		font-weight:bold;
+		padding: 0 0 0 50px;
+		background-image:url('../images/img_disc_on.png');
+		background-size:40px;
+		background-repeat:no-repeat;
 	}
 
 	.btn-group{
