--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -87,6 +87,8 @@ body{
     }
 }
 
+/*STYLES SHARED AMONG EACH SECTION */
+
 	section{
 
 	margin-top:50px;
@@ -169,7 +171,7 @@ body{
 		}
 	}
 
-	/* #PARK HERE DISC*/
+/* #PARK HERE DISC*/
 
 #park-here-disc{
 	time{
@@ -183,7 +185,7 @@ body{
 }
 
 
-	/* #PARK HERE NOTES */
+/* #PARK HERE NOTES */
 
 #park-here-notes{
 
@@ -206,7 +208,7 @@ body{
 }
 
 
-	/* #MAIN SCREEN PARKED */
+/* #MAIN SCREEN PARKED */
 
 #main-screen-parked{
 
@@ -232,4 +234,64 @@ body{
 	.btn-group{
 		position:initial;
 	}
+}
+
+/* #REPORT-CONTROLLER */
+
+#report-controller{
+	
+	nav{
+		position: fixed;
+		top:0;
+		display:block;
+		width:100%;
+		color: $titleColor;
+		font-weight:bold;
+
+		& span:first-child{
+
+			position:absolute;
+			top:20px;
+			left:20px;
+		}
+
+		& span:last-child{
+			position:absolute;
+			top:20px;
+			right:20px;
+		}
+
+	}
+
+	& img{
+		max-width:50%;
+		text-align:center;
+		margin-top: 35px;
+		margin-bottom: 0;
+	}
+
+	.thank-you{
+		text-transform:initial;
+		text-align: justify;
+		width: 75%;
+		@include whiteInput;
+		margin:0 auto;
+		border-top:0;
+		border-bottom:4px solid;
+		border-color:$whiteInputBorder;
+
+		p{
+		padding:15px;
+		padding-top:0;
+		}
+
+		h1{
+			margin:0;
+			padding:0;
+			text-align:center;
+			font-weight:bold;
+			padding-top:10px;
+		}
+	}
+
 }
