HTML & CSS 4 320px resol done, next > 360

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -192,3 +192,5 @@ section {
     text-align: center;
     font-weight: bold;
     padding-top: 10px; }
+
+/*MEDIA QUERY FOR LARGER RESOLUTION MIN 360px*/
