--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -84,6 +84,10 @@ body{
     margin-bottom:40px;
     font-weight:900;
 
+	@media screen and (min-width: 360px){
+	font-size:1.5em;
+	}
+
     }
 }
 
@@ -97,6 +101,10 @@ body{
 			max-width: 30%;
 			margin:0 10px;
 			margin-bottom: 60px;
+
+			@media screen and (min-width: 360px){
+				max-width:40%;
+			}
 		}
 
 		input{
@@ -144,6 +152,11 @@ body{
 			width:65%;
 			margin: 10px auto;
 			line-height:1.6em;
+
+			@media screen and (min-width: 360px){
+				font-size:1.8em;
+				width:90%;
+			}
 
 			&.redBtn,{
 				@include borderBtn;
@@ -295,6 +308,3 @@ body{
 	}
 
 }
-
-
-/*MEDIA QUERY FOR LARGER RESOLUTION MIN 360px*/
