--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,7 +27,7 @@ body {
     font-weight: 900; }
     @media screen and (min-width: 360px) {
       body h1 {
-        font-size: 1.5em; } }
+        font-size: 1.8em; } }
 
 /*STYLES SHARED AMONG EACH SECTION */
 section {
@@ -141,6 +141,9 @@ section {
   font-family: 'Lato' sans-serif;
   font-size: 2.0em;
   margin-top: 10px; }
+  @media screen and (min-width: 360px) {
+    #park-here-notes h1 {
+      font-size: 2.5em; } }
 #park-here-notes textarea {
   border: 0;
   background: white;
@@ -153,6 +156,10 @@ section {
   text-transform: uppercase;
   color: rgba(0, 0, 0, 0.6);
   padding: 5px; }
+  @media screen and (min-width: 360px) {
+    #park-here-notes textarea {
+      min-height: 280px;
+      padding: 15px; } }
 
 /* #MAIN SCREEN PARKED */
 #main-screen-parked {
@@ -161,6 +168,9 @@ section {
     padding: 0;
     margin: 0;
     margin-bottom: 15px; }
+    @media screen and (min-width: 360px) {
+      #main-screen-parked h1 {
+        margin-bottom: 50px; } }
   #main-screen-parked span time {
     font-size: 2em;
     color: #C01A2C;
@@ -169,8 +179,17 @@ section {
     background-image: url("../images/img_disc_on.png");
     background-size: 40px;
     background-repeat: no-repeat; }
+    @media screen and (min-width: 360px) {
+      #main-screen-parked span time {
+        padding: 0 0 0 85px;
+        font-size: 3.5em;
+        background-image: url("../images/img_disc_on.png");
+        background-size: 80px; } }
   #main-screen-parked .btn-group {
     position: initial; }
+    @media screen and (min-width: 360px) {
+      #main-screen-parked .btn-group:first-of-type {
+        margin-top: 60px; } }
 
 /* #REPORT-CONTROLLER */
 #report-controller nav {
