--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,6 +28,33 @@ body {
     @media screen and (min-width: 360px) {
       body h1 {
         font-size: 1.8em; } }
+  body a {
+    text-decoration: none;
+    color: rgba(0, 0, 0, 0.6); }
+  body .redBtn {
+    border-radius: 10px;
+    border-bottom: 4px solid;
+    padding: 10px 0;
+    background-color: #e62423;
+    border-color: #9d1b20; }
+  body .blueBtn {
+    border-radius: 10px;
+    border-bottom: 4px solid;
+    padding: 10px 0;
+    background-color: #3f55af;
+    border-color: #284083; }
+  body .greenBtn {
+    border-radius: 10px;
+    border-bottom: 4px solid;
+    padding: 10px 0;
+    background-color: #18ae60;
+    border-color: #246e36; }
+  body .lightBlueBtn {
+    border-radius: 10px;
+    border-bottom: 4px solid;
+    padding: 10px 0;
+    background-color: #50ade5;
+    border-color: #3c86ad; }
 
 /*STYLES SHARED AMONG EACH SECTION */
 section {
@@ -35,11 +62,12 @@ section {
   /*STYLING PLACERHOLDER*/ }
   section img {
     max-width: 30%;
-    margin: 0 10px;
     margin-bottom: 60px; }
     @media screen and (min-width: 360px) {
       section img {
         max-width: 40%; } }
+  section:nth-child(n+3) img {
+    margin: 60px 0px; }
   section input {
     display: block;
     margin: 0 auto;
@@ -84,7 +112,7 @@ section {
     @media screen and (min-width: 360px) {
       section .btn-group {
         bottom: 40px; } }
-  section button {
+  section .btn-group a, section .btn-group button {
     border: 0;
     text-decoration: none;
     font-family: 'Lato', sans-serif;
@@ -96,34 +124,10 @@ section {
     margin: 10px auto;
     line-height: 1.6em; }
     @media screen and (min-width: 360px) {
-      section button {
+      section .btn-group a, section .btn-group button {
         font-size: 1.8em;
         width: 85%;
         min-height: 60px; } }
-    section button.redBtn {
-      border-radius: 10px;
-      border-bottom: 4px solid;
-      min-height: 50px;
-      background-color: #e62423;
-      border-color: #9d1b20; }
-    section button.blueBtn {
-      border-radius: 10px;
-      border-bottom: 4px solid;
-      min-height: 50px;
-      background-color: #3f55af;
-      border-color: #284083; }
-    section button.greenBtn {
-      border-radius: 10px;
-      border-bottom: 4px solid;
-      min-height: 50px;
-      background-color: #18ae60;
-      border-color: #246e36; }
-    section button.lightBlueBtn {
-      border-radius: 10px;
-      border-bottom: 4px solid;
-      min-height: 50px;
-      background-color: #50ade5;
-      border-color: #3c86ad; }
 
 /* #PARK HERE DISC*/
 #park-here-disc time {
@@ -214,8 +218,8 @@ section {
 #report-controller img {
   max-width: 50%;
   text-align: center;
-  margin-top: 35px;
-  margin-bottom: 0; }
+  margin-top: 90px;
+  margin-bottom: 20px; }
   @media screen and (min-width: 360px) {
     #report-controller img {
       max-width: 60%; } }
