--- a/public/css/style.css
+++ b/public/css/style.css
@@ -165,6 +165,7 @@ section {
       min-height: 280px;
       padding: 15px; } }
 
+/*MAIN SCREEN_TO_PARK*/
 /* #MAIN SCREEN PARKED */
 #main-screen-parked {
   margin: 0; }
