--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -194,7 +194,6 @@ body{
 			@media screen and (min-width: 360px){
 				font-size:1.8em;
 				width:85%;
-				min-height:60px;
 			}
 		}
 	}
@@ -261,40 +260,46 @@ body{
 	margin:0;
 
 	h1{
-		padding:0;
-		margin:0;
-		margin-bottom:15px;
+		padding:0;;
+		margin:15px 0;
+		margin-top:35px;
 
 		@media screen and (min-width: 360px){
-			margin-bottom:50px;
+			margin-bottom:25px;
+		}
+	}
+
+	span{
+		display:block;
+		margin-bottom:35px;
+		@media screen and (min-width: 360px){
+			margin-bottom:10px;
+			margin:0;
 		}
 	}
 
 	span time{
 		font-size:2em;
 		color:#C01A2C;
-		font-weight:bold;
+		font-weight:bold;;
 		padding: 0 0 0 50px;
 		background-image:url('../images/img_disc_on.png');
 		background-size:40px;
 		background-repeat:no-repeat;
+		display:inline-block;
 
 		@media screen and (min-width: 360px){
 			padding: 0 0 0 85px;
 			font-size:3.5em;
 			background-image:url('../images/img_disc_on.png');
-			background-size:80px;;
+			background-size:80px;
+			margin-bottom:10px;
+
 		}
 	}
 
 	.btn-group{
 		position:initial;
-
-		@media screen and (min-width: 360px){
-			&:first-of-type{
-				margin-top:60px;
-			}
-		}
 	}
 }
 
