--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,6 +31,8 @@ body {
   body a {
     text-decoration: none;
     color: rgba(0, 0, 0, 0.6); }
+  body .warning {
+    color: red; }
   body .redBtn {
     border-radius: 10px;
     border-bottom: 4px solid;
