--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,5 @@
-/*VARIABLES COLORS */
 /*VARIABLES BUTTONS*/
 /*@MIXIN 4 BUTTONS*/
-/* HIDE SECTION (HELPER TO BUILD WEBSITE)*/
-.hideThis {
-  display: none; }
-
 /* SMALL RESET*/
 body, ul {
   margin: 0;
@@ -167,6 +162,14 @@ section {
       padding: 15px; } }
 
 /*MAIN SCREEN_TO_PARK*/
+#main-screen-to-park .warning {
+  display: inline-block;
+  margin-bottom: 10px; }
+  @media screen and (min-width: 360px) {
+    #main-screen-to-park .warning {
+      font-size: 1.4em;
+      margin-bottom: 30px; } }
+
 /* #MAIN SCREEN PARKED */
 #main-screen-parked {
   margin: 0; }
