--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -233,16 +233,7 @@ body{
 		}
 	}
 
-	span{
-		display:block;
-		margin-bottom:35px;
-		@media screen and (min-width: 360px){
-			margin-bottom:10px;
-			margin:0;
-		}
-	}
-
-	span time{
+	 time{
 		font-size:2em;
 		color:#C01A2C;
 		font-weight:bold;;
